# Caro-Game

./: LICENSE  README.md
.Caro-main/: CMakeLists.txt  README.md
.Caro-main/include/bll/ai/: AlphaBetaAI.h  BoardEvaluator.h  MinimaxAI.h  SimpleAI.h
.Caro-main/include/bll/game/: GameAction.h  GameManager.h  GameState.h  GomokuRule.h  MoveValidator.h  Player.h  TicTacToeRule.h
.Caro-main/include/dal/config/: GameConfig.h
.Caro-main/include/dal/entities/: GameRecord.h  Move.h
.Caro-main/include/dal/repositories/: FileGameHistoryRepository.h  SqliteGameHistoryRepository.h
.Caro-main/include/gui/: ControlPanel.h  GameBoard.h  GameRenderer.h  MainWindow.h
.Caro-main/include/shared/types/: GameConstants.h  Position.h
.Caro-main/include/shared/utils/: Utils.h  time.h  utils.h
.Caro-main/source/: README.md  main.cpp
.Caro-main/source/bll/ai/: AlphaBetaAI.cpp  BoardEvaluator.cpp  MinimaxAI.cpp  SimpleAI.cpp
.Caro-main/source/bll/game/: GameAction.cpp  GameManager.cpp  GomokuRule.cpp  TicTacToeRule.cpp
.Caro-main/source/dal/repositories/: FileGameHistoryRepository.cpp
.Caro-main/source/gui/: GameRenderer.cpp
.Caro-main/source/shared/utils/: Utils.cpp
